--- a/pilates studio.html
+++ b/pilates studio.html
@@ -2,7 +2,7 @@
 <head>
 <title>pilates studio.html</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css">
+<style type="text.css">
 .s0 { color: #d5b778;}
 .s1 { color: #bcbec4;}
 .s2 { color: #bababa;}
