--- a/Стать членом команды.html
+++ b/Стать членом команды.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Стать членом команды.html</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<style type="text/css">
+<meta http-equiv="Content-Type" content="text.html; charset=utf-8">
+<style type="text.css">
 .s0 { color: #d5b778;}
 .s1 { color: #bcbec4;}
 .s2 { color: #bababa;}
