--- a/pilates studio.html
+++ b/pilates studio.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>pilates studio.html</title>
-<meta http-equiv="Content-Type" content="text.html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <style type="text.css">
 .s0 { color: #d5b778;}
 .s1 { color: #bcbec4;}
